Modification mobile display, add some space for search and filter component. Correction of width populary component and activity component.

--- a/css/custom.css
+++ b/css/custom.css
@@ -24,6 +24,7 @@
 
 body {
     margin: auto;
+    /* padding: 0 30px 0 30px; */
     padding-right: 30px;
     padding-left: 30px;
     max-width: 1400px;
@@ -122,7 +123,7 @@ header figure {
     padding-bottom: 40px;
     padding-right: 30px;
     padding-left: 30px;
-    width: 27%;
+    width: 29%;
     background-color: #F2F2F2;
     border-radius: 20px;
 }
@@ -359,10 +360,14 @@ header a:hover {
 
 /* Component activity */
 
+.activity-container a {
+    display: flex;
+}
+
 .activity-container-primary figure {
     display: flex;
     flex-direction: column;
-    max-width: 315px;
+    max-width: 320px;
     border-radius: 20px;
     background-color: #FFFFFF;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
@@ -714,6 +719,7 @@ header a:hover {
     }
 
     .component-search-city {
+        max-width: 210px;
         padding-left: 15px;
     }
 
@@ -758,7 +764,7 @@ header a:hover {
     .component-filter-content {
         border: 2px solid #F0F2F6;
         padding: 15px 14px 15px 14px;
-        width: 160px;
+        width: 130px;
         border-radius: 10rem;
         font-size: 13px;
     }
@@ -771,9 +777,8 @@ header a:hover {
 
     .component-notification {
         align-items: baseline;
-        padding-left: 20px;
-        margin-top: 40px;
-        margin-bottom: 40px;
+        padding: 0 20px 0 20px;
+        margin: 40px 0 40px 0;
     }
 
     .component-notification-container {
